@@ -17,6 +17,9 @@ o CLEANUP: GenericDataFile and GenericDataFileSet no longer report
   on memory (RAM) usage of objects.
 o FIX: Now findByName() for GenericDataFileSet reports on the
   non-existing root paths in error messages.
+o DEPRECATE: dsApply() with either .parallel = "BiocParallel::BatchJobs"
+  or "BatchJobs" is deprecated.  Instead, use future::future_lapply()
+  with whatever choice of future::plan() preferred.
 
 
 Version: 2.10.0 [2016-01-04]
